src/lang/SourCParser.ts
// Generated from ./src/lang/SourCParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SourCParserListener } from "./SourCParserListener";
import { SourCParserVisitor } from "./SourCParserVisitor";


export class SourCParser extends Parser {
	public static readonly Break = 1;
	public static readonly Char = 2;
	public static readonly Const = 3;
	public static readonly Continue = 4;
	public static readonly Do = 5;
	public static readonly Double = 6;
	public static readonly Else = 7;
	public static readonly Float = 8;
	public static readonly For = 9;
	public static readonly If = 10;
	public static readonly Int = 11;
	public static readonly Long = 12;
	public static readonly Return = 13;
	public static readonly Short = 14;
	public static readonly Signed = 15;
	public static readonly Sizeof = 16;
	public static readonly Struct = 17;
	public static readonly Union = 18;
	public static readonly Unsigned = 19;
	public static readonly Void = 20;
	public static readonly While = 21;
	public static readonly LeftParen = 22;
	public static readonly RightParen = 23;
	public static readonly LeftBracket = 24;
	public static readonly RightBracket = 25;
	public static readonly LeftBrace = 26;
	public static readonly RightBrace = 27;
	public static readonly Less = 28;
	public static readonly LessEqual = 29;
	public static readonly Greater = 30;
	public static readonly GreaterEqual = 31;
	public static readonly LeftShift = 32;
	public static readonly RightShift = 33;
	public static readonly Plus = 34;
	public static readonly PlusPlus = 35;
	public static readonly Minus = 36;
	public static readonly MinusMinus = 37;
	public static readonly Star = 38;
	public static readonly Div = 39;
	public static readonly Mod = 40;
	public static readonly And = 41;
	public static readonly AndAnd = 42;
	public static readonly OrOr = 43;
	public static readonly Not = 44;
	public static readonly Question = 45;
	public static readonly Colon = 46;
	public static readonly Semi = 47;
	public static readonly Comma = 48;
	public static readonly Assign = 49;
	public static readonly StarAssign = 50;
	public static readonly DivAssign = 51;
	public static readonly ModAssign = 52;
	public static readonly PlusAssign = 53;
	public static readonly MinusAssign = 54;
	public static readonly Equal = 55;
	public static readonly NotEqual = 56;
	public static readonly Arrow = 57;
	public static readonly Dot = 58;
	public static readonly Identifier = 59;
	public static readonly Constant = 60;
	public static readonly DigitSequence = 61;
	public static readonly StringLiteral = 62;
	public static readonly ComplexDefine = 63;
	public static readonly IncludeDirective = 64;
	public static readonly AsmBlock = 65;
	public static readonly LineAfterPreprocessing = 66;
	public static readonly LineDirective = 67;
	public static readonly PragmaDirective = 68;
	public static readonly Whitespace = 69;
	public static readonly Newline = 70;
	public static readonly BlockComment = 71;
	public static readonly LineComment = 72;
	public static readonly RULE_type_specifier = 0;
	public static readonly RULE_translation_unit = 1;
	public static readonly RULE_external_declaration = 2;
	public static readonly RULE_declaration = 3;
	public static readonly RULE_init_declarator = 4;
	public static readonly RULE_declarator = 5;
	public static readonly RULE_initializer = 6;
	public static readonly RULE_initializer_list = 7;
	public static readonly RULE_assignment_expression = 8;
	public static readonly RULE_conditional_expression = 9;
	public static readonly RULE_logical_or_expression = 10;
	public static readonly RULE_logical_and_expression = 11;
	public static readonly RULE_equality_expression = 12;
	public static readonly RULE_relational_expression = 13;
	public static readonly RULE_additive_expression = 14;
	public static readonly RULE_multiplicative_expression = 15;
	public static readonly RULE_cast_expression = 16;
	public static readonly RULE_unary_expression = 17;
	public static readonly RULE_unary_operator = 18;
	public static readonly RULE_type_name = 19;
	public static readonly RULE_sizeof_operands = 20;
	public static readonly RULE_postfix_expression = 21;
	public static readonly RULE_primary_expression = 22;
	public static readonly RULE_expression = 23;
	public static readonly RULE_constant_expression = 24;
	public static readonly RULE_function_definition = 25;
	public static readonly RULE_pointer = 26;
	public static readonly RULE_parameter_list = 27;
	public static readonly RULE_parameter_declaration = 28;
	public static readonly RULE_compound_statement = 29;
	public static readonly RULE_statement = 30;
	public static readonly RULE_expression_statement = 31;
	public static readonly RULE_selection_statement = 32;
	public static readonly RULE_iteration_statement = 33;
	public static readonly RULE_jump_statement = 34;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"type_specifier", "translation_unit", "external_declaration", "declaration", 
		"init_declarator", "declarator", "initializer", "initializer_list", "assignment_expression", 
		"conditional_expression", "logical_or_expression", "logical_and_expression", 
		"equality_expression", "relational_expression", "additive_expression", 
		"multiplicative_expression", "cast_expression", "unary_expression", "unary_operator", 
		"type_name", "sizeof_operands", "postfix_expression", "primary_expression", 
		"expression", "constant_expression", "function_definition", "pointer", 
		"parameter_list", "parameter_declaration", "compound_statement", "statement", 
		"expression_statement", "selection_statement", "iteration_statement", 
		"jump_statement",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'break'", "'char'", "'const'", "'continue'", "'do'", "'double'", 
		"'else'", "'float'", "'for'", "'if'", "'int'", "'long'", "'return'", "'short'", 
		"'signed'", "'sizeof'", "'struct'", "'union'", "'unsigned'", "'void'", 
		"'while'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", 
		"'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", 
		"'&'", "'&&'", "'||'", "'!'", "'?'", "':'", "';'", "','", "'='", "'*='", 
		"'/='", "'%='", "'+='", "'-='", "'=='", "'!='", "'->'", "'.'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "Break", "Char", "Const", "Continue", "Do", "Double", "Else", 
		"Float", "For", "If", "Int", "Long", "Return", "Short", "Signed", "Sizeof", 
		"Struct", "Union", "Unsigned", "Void", "While", "LeftParen", "RightParen", 
		"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Less", "LessEqual", 
		"Greater", "GreaterEqual", "LeftShift", "RightShift", "Plus", "PlusPlus", 
		"Minus", "MinusMinus", "Star", "Div", "Mod", "And", "AndAnd", "OrOr", 
		"Not", "Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", "DivAssign", 
		"ModAssign", "PlusAssign", "MinusAssign", "Equal", "NotEqual", "Arrow", 
		"Dot", "Identifier", "Constant", "DigitSequence", "StringLiteral", "ComplexDefine", 
		"IncludeDirective", "AsmBlock", "LineAfterPreprocessing", "LineDirective", 
		"PragmaDirective", "Whitespace", "Newline", "BlockComment", "LineComment",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SourCParser._LITERAL_NAMES, SourCParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SourCParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SourCParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return SourCParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SourCParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SourCParser._ATN, this);
	}
	// @RuleVersion(0)
	public type_specifier(): Type_specifierContext {
		let _localctx: Type_specifierContext = new Type_specifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SourCParser.RULE_type_specifier);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SourCParser.Char) | (1 << SourCParser.Double) | (1 << SourCParser.Float) | (1 << SourCParser.Int) | (1 << SourCParser.Long) | (1 << SourCParser.Short) | (1 << SourCParser.Signed) | (1 << SourCParser.Unsigned) | (1 << SourCParser.Void))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public translation_unit(): Translation_unitContext {
		let _localctx: Translation_unitContext = new Translation_unitContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SourCParser.RULE_translation_unit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 75;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SourCParser.Char) | (1 << SourCParser.Double) | (1 << SourCParser.Float) | (1 << SourCParser.Int) | (1 << SourCParser.Long) | (1 << SourCParser.Short) | (1 << SourCParser.Signed) | (1 << SourCParser.Unsigned) | (1 << SourCParser.Void))) !== 0)) {
				{
				{
				this.state = 72;
				this.external_declaration();
				}
				}
				this.state = 77;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public external_declaration(): External_declarationContext {
		let _localctx: External_declarationContext = new External_declarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SourCParser.RULE_external_declaration);
		try {
			this.state = 80;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 78;
				this.function_definition();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 79;
				this.declaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SourCParser.RULE_declaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 83;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 82;
				this.type_specifier();
				}
				}
				this.state = 85;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SourCParser.Char) | (1 << SourCParser.Double) | (1 << SourCParser.Float) | (1 << SourCParser.Int) | (1 << SourCParser.Long) | (1 << SourCParser.Short) | (1 << SourCParser.Signed) | (1 << SourCParser.Unsigned) | (1 << SourCParser.Void))) !== 0));
			this.state = 87;
			this.init_declarator();
			this.state = 88;
			this.match(SourCParser.Semi);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public init_declarator(): Init_declaratorContext {
		let _localctx: Init_declaratorContext = new Init_declaratorContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SourCParser.RULE_init_declarator);
		try {
			this.state = 95;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 90;
				this.declarator();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 91;
				this.declarator();
				this.state = 92;
				this.match(SourCParser.Assign);
				this.state = 93;
				this.initializer();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declarator(): DeclaratorContext {
		let _localctx: DeclaratorContext = new DeclaratorContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SourCParser.RULE_declarator);
		let _la: number;
		try {
			this.state = 129;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 97;
				this.match(SourCParser.Identifier);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 99;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SourCParser.Star) {
					{
					this.state = 98;
					this.pointer();
					}
				}

				this.state = 101;
				this.match(SourCParser.Identifier);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 102;
				this.match(SourCParser.LeftParen);
				this.state = 103;
				this.match(SourCParser.Star);
				this.state = 104;
				this.match(SourCParser.Identifier);
				this.state = 105;
				this.match(SourCParser.RightParen);
				this.state = 106;
				this.match(SourCParser.LeftParen);
				this.state = 110;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SourCParser.Char) | (1 << SourCParser.Double) | (1 << SourCParser.Float) | (1 << SourCParser.Int) | (1 << SourCParser.Long) | (1 << SourCParser.Short))) !== 0)) {
					{
					{
					this.state = 107;
					this.type_name();
					}
					}
					this.state = 112;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 113;
				this.match(SourCParser.RightParen);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 114;
				this.match(SourCParser.Identifier);
				this.state = 115;
				this.match(SourCParser.LeftBracket);
				this.state = 117;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === SourCParser.Sizeof || _la === SourCParser.LeftParen || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (SourCParser.Plus - 34)) | (1 << (SourCParser.PlusPlus - 34)) | (1 << (SourCParser.Minus - 34)) | (1 << (SourCParser.MinusMinus - 34)) | (1 << (SourCParser.Star - 34)) | (1 << (SourCParser.And - 34)) | (1 << (SourCParser.Not - 34)) | (1 << (SourCParser.Identifier - 34)) | (1 << (SourCParser.Constant - 34)) | (1 << (SourCParser.StringLiteral - 34)))) !== 0)) {
					{
					this.state = 116;
					this.constant_expression();
					}
				}

				this.state = 119;
				this.match(SourCParser.RightBracket);
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 120;
				this.match(SourCParser.Identifier);
				this.state = 121;
				this.match(SourCParser.LeftParen);
				this.state = 125;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SourCParser.Char) | (1 << SourCParser.Double) | (1 << SourCParser.Float) | (1 << SourCParser.Int) | (1 << SourCParser.Long) | (1 << SourCParser.Short) | (1 << SourCParser.Signed) | (1 << SourCParser.Unsigned) | (1 << SourCParser.Void))) !== 0)) {
					{
					{
					this.state = 122;
					this.parameter_list(0);
					}
					}
					this.state = 127;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 128;
				this.match(SourCParser.RightParen);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public initializer(): InitializerContext {
		let _localctx: InitializerContext = new InitializerContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SourCParser.RULE_initializer);
		try {
			this.state = 136;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SourCParser.Sizeof:
			case SourCParser.LeftParen:
			case SourCParser.Plus:
			case SourCParser.PlusPlus:
			case SourCParser.Minus:
			case SourCParser.MinusMinus:
			case SourCParser.Star:
			case SourCParser.And:
			case SourCParser.Not:
			case SourCParser.Identifier:
			case SourCParser.Constant:
			case SourCParser.StringLiteral:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 131;
				this.assignment_expression();
				}
				break;
			case SourCParser.LeftBrace:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 132;
				this.match(SourCParser.LeftBrace);
				this.state = 133;
				this.initializer_list(0);
				this.state = 134;
				this.match(SourCParser.RightBrace);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public initializer_list(): Initializer_listContext;
	public initializer_list(_p: number): Initializer_listContext;
	// @RuleVersion(0)
	public initializer_list(_p?: number): Initializer_listContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: Initializer_listContext = new Initializer_listContext(this._ctx, _parentState);
		let _prevctx: Initializer_listContext = _localctx;
		let _startState: number = 14;
		this.enterRecursionRule(_localctx, 14, SourCParser.RULE_initializer_list, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 139;
			this.initializer();
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 146;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new Initializer_listContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, SourCParser.RULE_initializer_list);
					this.state = 141;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 142;
					this.match(SourCParser.Comma);
					this.state = 143;
					this.initializer();
					}
					}
				}
				this.state = 148;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 10, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public assignment_expression(): Assignment_expressionContext {
		let _localctx: Assignment_expressionContext = new Assignment_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, SourCParser.RULE_assignment_expression);
		try {
			this.state = 154;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 149;
				this.conditional_expression();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 150;
				this.unary_expression();
				this.state = 151;
				this.match(SourCParser.Assign);
				this.state = 152;
				this.assignment_expression();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public conditional_expression(): Conditional_expressionContext {
		let _localctx: Conditional_expressionContext = new Conditional_expressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SourCParser.RULE_conditional_expression);
		try {
			this.state = 163;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 156;
				this.logical_or_expression(0);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 157;
				this.logical_or_expression(0);
				this.state = 158;
				this.match(SourCParser.Question);
				this.state = 159;
				this.conditional_expression();
				this.state = 160;
				this.match(SourCParser.Colon);
				this.state = 161;
				this.conditional_expression();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public logical_or_expression(): Logical_or_expressionContext;
	public logical_or_expression(_p: number): Logical_or_expressionContext;
	// @RuleVersion(0)
	public logical_or_expression(_p?: number): Logical_or_expressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: Logical_or_expressionContext = new Logical_or_expressionContext(this._ctx, _parentState);
		let _prevctx: Logical_or_expressionContext = _localctx;
		let _startState: number = 20;
		this.enterRecursionRule(_localctx, 20, SourCParser.RULE_logical_or_expression, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 166;
			this.logical_and_expression(0);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 173;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new Logical_or_expressionContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, SourCParser.RULE_logical_or_expression);
					this.state = 168;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 169;
					this.match(SourCParser.OrOr);
					this.state = 170;
					this.logical_and_expression(0);
					}
					}
				}
				this.state = 175;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public logical_and_expression(): Logical_and_expressionContext;
	public logical_and_expression(_p: number): Logical_and_expressionContext;
	// @RuleVersion(0)
	public logical_and_expression(_p?: number): Logical_and_expressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: Logical_and_expressionContext = new Logical_and_expressionContext(this._ctx, _parentState);
		let _prevctx: Logical_and_expressionContext = _localctx;
		let _startState: number = 22;
		this.enterRecursionRule(_localctx, 22, SourCParser.RULE_logical_and_expression, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 177;
			this.equality_expression(0);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 184;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new Logical_and_expressionContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, SourCParser.RULE_logical_and_expression);
					this.state = 179;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 180;
					this.match(SourCParser.AndAnd);
					this.state = 181;
					this.equality_expression(0);
					}
					}
				}
				this.state = 186;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public equality_expression(): Equality_expressionContext;
	public equality_expression(_p: number): Equality_expressionContext;
	// @RuleVersion(0)
	public equality_expression(_p?: number): Equality_expressionContext {
		if (_p === undefined) {
			_p = 0;
		}
